@@ -5,19 +5,26 @@ import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Component;
 import io.jsonwebtoken.io.Decoders;
 
 import javax.crypto.SecretKey;
 import java.util.Date;
-import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 
 @Component
 public class JwtTokenProvider {
 
     @Value("${jwt.secret}")
     private String secretKey;
+
+    private final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 60 * 60;
+
+    private final long REFRESH_TOKEN_EXPIRE_TIME = 1000 * 60 * 60 * 24 * 7;
+
     //토큰 검증
     public boolean validateToken(String token) {
         try{
@@ -34,26 +41,78 @@ public class JwtTokenProvider {
     public Authentication getAuthentication(String token) {
         SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
         Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
-        String email = claims.getSubject();
 
-        User principal = new User(email, "", Collections.emptyList());
+        String email = claims.getSubject();
+        List<String> roles = Optional.ofNullable((List<String>) claims.get("roles"))
+                .orElse(List.of());
+        List<SimpleGrantedAuthority> authorities = roles.stream()
+                .map(SimpleGrantedAuthority::new)
+                .toList();
+
+        System.out.println("[getAuthentication] email: " + email);
+        System.out.println("[getAuthentication] claims: " + claims);
+
+        User principal = new User(email, "", authorities);
         return new UsernamePasswordAuthenticationToken(principal, token, principal.getAuthorities());
     }
-    //토큰 생성
-    public String generateToken(String email) {
+
+    public String generateAccessToken(String email, List<String> roles) {
+        return generateToken(email, roles, ACCESS_TOKEN_EXPIRE_TIME, "access");
+    }
+
+    //리프레시 토큰 생성
+    public String generateRefreshToken(String email) {
+        return generateToken(email, List.of(), REFRESH_TOKEN_EXPIRE_TIME, "refresh");
+    }
+
+    private String generateToken(String email, List<String> roles, long expireTime, String tokenType) {
         long now = System.currentTimeMillis();
-        long exp = 1000 * 60 * 60 * 24;
+        Claims claims = Jwts.claims().setSubject(email);
+        claims.put("roles", roles);
+        claims.put("tokenType", tokenType);
 
-        SecretKey Key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
-        System.out.println("[generateToken] 발급 email: " + email);
+        SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
+        System.out.println("[generateToken] 발급 email: " + email + ", type: " + tokenType);
+
         String token = Jwts.builder()
-                .setSubject(email)
+                .setClaims(claims)
                 .setIssuedAt(new Date(now))
-                .setExpiration(new Date(now+exp))
-                .signWith(Key, SignatureAlgorithm.HS256)
+                .setExpiration(new Date(now + expireTime))
+                .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
-        System.out.println("[generateToken] 발급된 토큰: " + token);
 
+        System.out.println("[generateToken] 발급된 " + tokenType + " 토큰: " + token);
         return token;
+    }
+
+    public String generateToken(String email, List<String> roles) {
+        return generateAccessToken(email, roles);
+    }
+
+    public String getEmailFromToken(String token) {
+        SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
+        Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
+        return claims.getSubject();
+    }
+
+    public boolean isRefreshToken(String token) {
+        try {
+            SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
+            Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
+            String tokenType = (String) claims.get("tokenType");
+            return "refresh".equals(tokenType);
+        } catch (JwtException e) {
+            return false;
+        }
+    }
+
+    public boolean isTokenExpired(String token) {
+        try {
+            SecretKey key = Keys.hmacShaKeyFor(Decoders.BASE64.decode(secretKey));
+            Claims claims = Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token).getBody();
+            return claims.getExpiration().before(new Date());
+        } catch (JwtException e) {
+            return true;
+        }
     }
 }
